Creacion del main y su seccion de servicios

--- a/index.html
+++ b/index.html
@@ -18,5 +18,31 @@
         <div class="caja_ubicacion"><i class="fas fa-map-marker-alt icono-ubicacion"></i><span class="ubicacion">Mexico, Distrito Federal</span></div><a class="boton boton_azul" href="#">Contactar</a>
       </div>
     </div>
+    <main>
+      <section class="contenedor_servicios">
+        <h2>Nuestros Servicios</h2>
+        <div class="servicios">
+          <div class="cajaServicio">
+            <h3>Diseño Web</h3>
+            <div class="iconos"><i class="fas fa-pen-fancy"></i></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere esse doloremque enim earum blanditiis consequatur alias consectetur minus ut corrupti.</p>
+          </div>
+          <div class="cajaServicio">
+            <h3>Aplicaciones Moviles</h3>
+            <div class="iconos"><i class="fab fa-android"></i><i class="fab fa-apple"></i></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere esse doloremque enim earum blanditiis consequatur alias consectetur minus ut corrupti.</p>
+          </div>
+          <div class="cajaServicio">
+            <h3>Social media</h3>
+            <div class="iconos"><i class="fab fa-twitter"></i><i class="fab fa-facebook-square"></i></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere esse doloremque enim earum blanditiis consequatur alias consectetur minus ut corrupti.</p>
+          </div>
+        </div>
+      </section>
+      <section class="contenedor_contacto">
+        <h2>Contacto</h2>
+        <div class="contacto"></div>
+      </section>
+    </main>
   </body>
 </html>
