Creacion del formulario

--- a/index.html
+++ b/index.html
@@ -25,23 +25,50 @@
           <div class="cajaServicio">
             <h3>Diseño Web</h3>
             <div class="iconos"><i class="fas fa-pen-fancy"></i></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere esse doloremque enim earum blanditiis consequatur alias consectetur minus ut corrupti.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere esse doloremque enim earum blanditiis consequatur alias consectetur minus ut corrupti.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi possimus eligendi blanditiis commodi dolorum. Neque inventore assumenda molestiae corporis dolores.</p>
           </div>
           <div class="cajaServicio">
             <h3>Aplicaciones Moviles</h3>
             <div class="iconos"><i class="fab fa-android"></i><i class="fab fa-apple"></i></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere esse doloremque enim earum blanditiis consequatur alias consectetur minus ut corrupti.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere esse doloremque enim earum blanditiis consequatur alias consectetur minus ut corrupti. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi possimus eligendi blanditiis commodi dolorum. Neque inventore assumenda molestiae corporis dolores.</p>
           </div>
           <div class="cajaServicio">
             <h3>Social media</h3>
             <div class="iconos"><i class="fab fa-twitter"></i><i class="fab fa-facebook-square"></i></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere esse doloremque enim earum blanditiis consequatur alias consectetur minus ut corrupti.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere esse doloremque enim earum blanditiis consequatur alias consectetur minus ut corrupti. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi possimus eligendi blanditiis commodi dolorum. Neque inventore assumenda molestiae corporis dolores.</p>
           </div>
         </div>
       </section>
       <section class="contenedor_contacto">
         <h2>Contacto</h2>
-        <div class="contacto"></div>
+        <div class="contacto">
+          <h3>Contactanos llenando todos los campos</h3>
+          <form action="#">
+            <div class="campos_principales">
+              <div class="campo">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" placeholder="Tu nombre"/>
+              </div>
+              <div class="campo">
+                <label for="telefono">Telefono:</label>
+                <input type="text" id="telefono" placeholder="Tu telefono"/>
+              </div>
+            </div>
+            <div class="campo">
+              <label for="correo">Correo:</label>
+              <input type="email" id="correo" placeholder="Tu correo electronico"/>
+            </div>
+            <div class="campo">
+              <label for="mensaje">Mensaje:</label>
+              <textarea id="mensaje"></textarea>
+            </div>
+            <div class="contenedor_enviar">
+              <div class="campo">
+                <input class="boton boton_azul" type="submit" value="Enviar"/>
+              </div>
+            </div>
+          </form>
+        </div>
       </section>
     </main>
   </body>
