Crecion del menu responsivo

--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Flexbox</title><script src="https://kit.fontawesome.com/42c004fb79.js" crossorigin="anonymous"></script>
+    <title>Flexbox</title>
+    <script src="https://kit.fontawesome.com/42c004fb79.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,300;1,400&amp;family=Source+Sans+Pro:wght@300;500&amp;display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="css/estilos.css"/>
   </head>
   <body>
     <header class="header">
-      <div class="header__flex"><a class="enlace" href="inicio.html">inicio</a><a class="enlace" href="nosotros.html">nosotros</a><a class="enlace" href="clientes.html">clientes</a><a class="enlace" href="contactos.html">contactos</a>
+      <div class="header__flex">
+        <div class="menu-responsive">
+          <div class="menu-responsive__contenedor-hamburguer">
+            <div class="menu-hamburguer"><i class="fas fa-bars icon-hamburguer"></i></div>
+            <div class="enlaces"><a class="enlace" href="#">inicio</a><a class="enlace" href="#">nosotros</a><a class="enlace" href="#">clientes</a><a class="enlace" href="#">contactos</a>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
     <div class="hero">
@@ -71,5 +79,6 @@
         </div>
       </section>
     </main>
+    <script src="script/script.js"></script>
   </body>
 </html>
